# cpo_analyzer

./: .travis.yml  AUTHORS  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/example_experiment_1/: example_1_config.toml  statistics
src/: color_gradients.rs  lib.rs  main.rs
src/configuration/: config.rs  mod.rs  opt.rs  particle_record.rs  pole_figure_configuration.rs  record.rs
src/pole_figures/: color_gradients.rs  crystal_axis.rs  lambert.rs  make_pole_figures.rs  minerals.rs  mod.rs  percentage.rs  pole_figure.rs  pole_figure_configuration.rs
tests/: run_test_example_1.rs  test_example_1.toml
