[package]
name = "cpo_analyzer"
version = "0.1.0-pre"
authors = ["Menno Fraters <menno.fraters@outlook.com>"]
edition = "2018"

[dependencies]
ndarray = { version = "0.13.0", features = ["rayon"] }
palette = "0.5"
plotters = "0.3.0"
csv = "1.1.3"
toml = "0.5.6"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_bytes = "0.11.3"
structopt = "0.3"
rayon = "1.4.0"
libflate = "1.0.3"
strum = { version = "0.20", features = ["derive"] }