[package]
name = "cpo_analyzer"
version = "0.1.0"
authors = ["Menno Fraters <menno.fraters@outlook.com>", "Magali Billen <mibillen@ucdavis.edu"]
license = "GPL-2.0-or-later"
description = "Tools to analyzer Crystal Preferred Orientation data, including creating polefigures."
readme = "README.md"
homepage = "https://github.com/MFraters/cpo_analyzer"
repository = "https://github.com/MFraters/cpo_analyzer"
edition = "2018"
keywords = ["CPO","crystallographic preferred orientation", "LPO", "lattice preferred orientation", "pole figures"]
categories = ["science"]

[dependencies]
ndarray = { version = "0.13.0", features = ["rayon"] }
palette = "0.5"
plotters = "0.3.0"
csv = "1.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
structopt = "0.3"
rayon = "1.4.0"
libflate = "1.0.3"
strum = { version = "0.20", features = ["derive"] }

[dev-dependencies]
assert_cmd = "1.0.3"